# pipeline_registration_pcl_libpointmatcher

./: .gitignore
build-icp_registration/: CMakeCache.txt  Makefile  cmake_install.cmake
build-initial_registration/: CMakeCache.txt  Makefile  cmake_install.cmake  initial_registration  scan01.pcd  scan02.pcd
conversions/: column_selection.awk  conversion_csvtopcd.sh  convert_csv_to_pcd.awk  entete.txt  entete1.txt  ligne_commande.txt
icp_registration/: CMakeLists.txt  icp_registration.cpp
initial_registration/: CMakeLists.txt  cloud.h  cloud.inl  correspondences_rejection.h  correspondences_rejection.inl  correspondences_search.h  correspondences_search.inl  display_clouds.h  display_clouds.inl  display_normals.inl  initial_registration.cpp  iterative_registration.h  iterative_registration.inl  keypoints_search.h  keypoints_search.inl  transformation_estimator.h
qt/: CMakeLists.txt  cloud.inl  display_correspondences.h  display_correspondences.inl  display_correspondences_with_clouds.inl  keypoints_search.inl
qt/build-debug_initial_reg-Basic-Default/: CMakeCache.txt  Makefile  cmake_install.cmake  initial_registration.cbp
qt/debug_initial_reg/: cloud.inl  display_clouds.inl  display_correspondences.inl  display_correspondences_with_clouds.h  display_correspondences_with_clouds.inl  display_normals.inl  keypoints_search.inl  main.cpp  transformation_estimator.inl
qt/initial_registration/: CMakeLists.txt  best_arguments  cloud.inl  correspondences_search.h  display_clouds.inl  display_correspondences.inl  display_correspondences_with_clouds.inl  display_hist.h  display_hist.inl  display_normals.h  display_normals.inl  get_cost_matrix.h  get_cost_matrix.inl  get_cost_matrix_fpfh.h  get_cost_matrix_fpfh.inl  get_cost_matrix_usc.h  get_cost_matrix_usc.inl  keypoints_search.h  keypoints_search.inl  main.cpp  main_save1632.cpp  normalize_hist.h  normalize_hist.inl
qt/initial_registration/CMake/: FindDLIB.cmake
